--- a/arch/arm/boot/dts/rv1126-bl-p001-v5.dts
+++ b/arch/arm/boot/dts/rv1126-bl-p001-v5.dts
@@ -14,7 +14,7 @@
  *		  specify panel@3-reg = <0>(fixed, mean input device)
  *		  specify esd_power_value and esd_power_cmd, the value used in panel-simple.c
  *		add port@3 in dsi-ports
- * 		  specify reg, note!!: must different from other ports, and should be [1, 5](kernel driver only support max 5)
+ * 		  specify reg, note!!: must be different from other ports, and should be [1, 5](kernel driver only support max 5)
 */
 
 #include "rv1126.dtsi"
@@ -122,7 +122,6 @@
 			rockchip,pins = <2 RK_PD5 RK_FUNC_GPIO &pcfg_pull_down>;
         };
     };
-
 };
 
 &pwm4 {
@@ -232,7 +231,7 @@
 		tp-node = <&tlsc6x_ts>;
 		id-regs-len = <3>;
 		id-regs = <0xda 0xdb 0xdc>;
-		id-targets = <56 33 31>;
+		id-targets = <0x38 0x21 0x1f>;
 		adc = <1234>;
 		esd_power_value = <128>; // 0x80
 		esd_power_cmd = <9>;
@@ -691,34 +690,19 @@
 		TP_MAX_Y = <1280>;
 	};
 
-	focaltech: focaltech@38{
+	focaltech: focaltech@38 {
 		status = "disa";
 		compatible = "focaltech,fts";
 		reg = <0x38>;
-		//vdd-supply = <&pm8916_l15>;
-		//vcc_i2c-supply = <&pm8916_l16>;
 		focaltech,irq-gpio = <&gpio2 RK_PA6 IRQ_TYPE_EDGE_FALLING>;
 		focaltech,reset-gpio = <&gpio2 RK_PB2 GPIO_ACTIVE_LOW>;
 		interrupt-parent = <&gpio2>;
 		interrupts = <GIC_SPI 36 IRQ_TYPE_LEVEL_HIGH>;
 		focaltech,max-touch-number = <10>;
-		focaltech,display-coords =  <0 0 719 1279>;
+		focaltech,display-coords = <0 0 719 1279>;
 
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_tlsc6x>;
-
-		// pinctrl-names = "pmx_ts_active","pmx_ts_suspend","pmx_ts_release";
-		// pinctrl-0 = <&ts_int_active &ts_reset_active>;
-		// pinctrl-1 = <&ts_int_suspend &ts_reset_suspend>;
-		// pinctrl-2 = <&ts_release>;
-
-		/*
-		focaltech,have-key;
-		focaltech,key-number = <3>;
-		focaltech,keys = <139 102 158>;
-		focaltech,key-x-coords = <200 600 800>;
-		focaltech,key-y-coords = <2000 2000 2000>;
-		*/
 	};
 };
 
