--- a/arch/arm/boot/dts/rv1126-c13-v2.dts
+++ b/arch/arm/boot/dts/rv1126-c13-v2.dts
@@ -231,7 +231,7 @@
 		tp-node = <&tlsc6x_ts>;
 		id-regs-len = <3>;
 		id-regs = <0xda 0xdb 0xdc>;
-		id-targets = <56 33 31>;
+		id-targets = <0x38 0x21 0x1f>;
 		adc = <1234>;
 		esd_power_value = <128>; // 0x80
 		esd_power_cmd = <9>;
@@ -421,7 +421,7 @@
 		id-regs = <0xda 0xdb 0xdc>;
 		id-targets = <0x40 0x05 0x67>;
 		adc = <0>;
-		esd_power_value = <156>; // 0x1c
+		esd_power_value = <156>; // 0x9c
 		esd_power_cmd = <10>;
 		compatible = "simple-panel-dsi";
 		reg = <0>;
@@ -690,34 +690,19 @@
 		TP_MAX_Y = <1280>;
 	};
 
-	focaltech: focaltech@38{
+	focaltech: focaltech@38 {
 		status = "disa";
 		compatible = "focaltech,fts";
 		reg = <0x38>;
-		//vdd-supply = <&pm8916_l15>;
-		//vcc_i2c-supply = <&pm8916_l16>;
 		focaltech,irq-gpio = <&gpio2 RK_PA6 IRQ_TYPE_EDGE_FALLING>;
 		focaltech,reset-gpio = <&gpio2 RK_PB2 GPIO_ACTIVE_LOW>;
 		interrupt-parent = <&gpio2>;
 		interrupts = <GIC_SPI 36 IRQ_TYPE_LEVEL_HIGH>;
 		focaltech,max-touch-number = <10>;
-		focaltech,display-coords =  <0 0 719 1279>;
+		focaltech,display-coords = <0 0 719 1279>;
 
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_tlsc6x>;
-
-		// pinctrl-names = "pmx_ts_active","pmx_ts_suspend","pmx_ts_release";
-		// pinctrl-0 = <&ts_int_active &ts_reset_active>;
-		// pinctrl-1 = <&ts_int_suspend &ts_reset_suspend>;
-		// pinctrl-2 = <&ts_release>;
-
-		/*
-		focaltech,have-key;
-		focaltech,key-number = <3>;
-		focaltech,keys = <139 102 158>;
-		focaltech,key-x-coords = <200 600 800>;
-		focaltech,key-y-coords = <2000 2000 2000>;
-		*/
 	};
 };
 
