--- a/arch/arm/configs/rv1126-N2.config
+++ b/arch/arm/configs/rv1126-N2.config
@@ -13,8 +13,8 @@ CONFIG_BACKLIGHT_GPIO=y
 CONFIG_VIDEO_OV2740=y
 # CONFIG_VIDEO_OV4689 is not set
 CONFIG_RTL_WIRELESS_SOLUTION=y
-CONFIG_BCMDHD=m
-CONFIG_RTL8723DS=m
+CONFIG_BCMDHD=y
+CONFIG_RTL8723DS=y
 # CONFIG_AP6XXX is not set
 # CONFIG_AP6XXX_WIFI6 is not set
 # CONFIG_AP6XXX_INDEP_POWER is not set
@@ -51,8 +51,8 @@ CONFIG_HZ_1000=y
 CONFIG_HZ=1000
 # CONFIG_CFG80211_DEFAULT_PS is not set
 CONFIG_CFG80211_DEBUGFS=y
-CONFIG_WIFI_BUILD_MODULE=y
-#CONFIG_WIFI_LOAD_DRIVER_WHEN_KERNEL_BOOTUP=y
+# CONFIG_WIFI_BUILD_MODULE is not set
+CONFIG_WIFI_LOAD_DRIVER_WHEN_KERNEL_BOOTUP=y
 CONFIG_FRAME_WARN=1280
 # CONFIG_USB_XHCI_HCD is not set
 CONFIG_WATCHDOG_PRETIMEOUT_GOV=y
@@ -60,4 +60,4 @@ CONFIG_WATCHDOG_PRETIMEOUT_GOV=y
 CONFIG_WATCHDOG_PRETIMEOUT_DEFAULT_GOV_PANIC=y
 # CONFIG_WATCHDOG_PRETIMEOUT_GOV_NOOP is not set
 CONFIG_WATCHDOG_PRETIMEOUT_GOV_PANIC=y
-# CONFIG_BBL_IOTRACE is not set
+
