--- a/arch/arm/configs/rv1126-X1.config
+++ b/arch/arm/configs/rv1126-X1.config
@@ -12,8 +12,8 @@ CONFIG_USB_HIDDEV=y
 CONFIG_VIDEO_OV2740=y
 # CONFIG_VIDEO_OV4689 is not set
 CONFIG_RTL_WIRELESS_SOLUTION=y
-CONFIG_BCMDHD=m
-CONFIG_AP6XXX=m
+CONFIG_BCMDHD=y
+CONFIG_AP6XXX=y
 # CONFIG_AP6XXX_WIFI6 is not set
 # CONFIG_AP6XXX_INDEP_POWER is not set
 CONFIG_BCMDHD_FW_PATH="/vendor/etc/firmware/fw_bcmdhd.bin"
@@ -50,8 +50,8 @@ CONFIG_HZ_1000=y
 CONFIG_HZ=1000
 # CONFIG_CFG80211_DEFAULT_PS is not set
 CONFIG_CFG80211_DEBUGFS=y
-CONFIG_WIFI_BUILD_MODULE=y
-#CONFIG_WIFI_LOAD_DRIVER_WHEN_KERNEL_BOOTUP=y
+# CONFIG_WIFI_BUILD_MODULE is not set
+CONFIG_WIFI_LOAD_DRIVER_WHEN_KERNEL_BOOTUP=y
 CONFIG_FRAME_WARN=1280
 # CONFIG_USB_XHCI_HCD is not set
 CONFIG_WATCHDOG_PRETIMEOUT_GOV=y
@@ -59,5 +59,47 @@ CONFIG_WATCHDOG_PRETIMEOUT_GOV=y
 CONFIG_WATCHDOG_PRETIMEOUT_DEFAULT_GOV_PANIC=y
 # CONFIG_WATCHDOG_PRETIMEOUT_GOV_NOOP is not set
 CONFIG_WATCHDOG_PRETIMEOUT_GOV_PANIC=y
-# CONFIG_BBL_IOTRACE is not set
+CONFIG_RTL8189FS=y
 CONFIG_REALTEK_PHY=y
+CONFIG_USB_CATC=y
+CONFIG_USB_KAWETH=y
+CONFIG_USB_PEGASUS=y
+CONFIG_USB_RTL8150=y
+CONFIG_USB_RTL8152=y
+CONFIG_USB_LAN78XX=y
+CONFIG_USB_USBNET=y
+CONFIG_USB_NET_AX8817X=y
+CONFIG_USB_NET_AX88179_178A=y
+CONFIG_USB_NET_CDCETHER=y
+CONFIG_USB_NET_CDC_EEM=y
+CONFIG_USB_NET_CDC_NCM=y
+CONFIG_USB_NET_HUAWEI_CDC_NCM=y
+CONFIG_USB_NET_CDC_MBIM=y
+CONFIG_USB_NET_DM9601=y
+CONFIG_USB_NET_SR9700=y
+CONFIG_USB_NET_SR9800=y
+CONFIG_USB_NET_SMSC75XX=y
+CONFIG_USB_NET_SMSC95XX=y
+CONFIG_USB_NET_GL620A=y
+CONFIG_USB_NET_NET1080=y
+CONFIG_USB_NET_PLUSB=y
+CONFIG_USB_NET_MCS7830=y
+CONFIG_USB_NET_RNDIS_HOST=y
+CONFIG_USB_NET_CDC_SUBSET_ENABLE=y
+CONFIG_USB_NET_CDC_SUBSET=y
+CONFIG_USB_ALI_M5632=y
+CONFIG_USB_AN2720=y
+CONFIG_USB_BELKIN=y
+CONFIG_USB_ARMLINUX=y
+CONFIG_USB_EPSON2888=y
+CONFIG_USB_KC2190=y
+CONFIG_USB_NET_ZAURUS=y
+CONFIG_USB_NET_CX82310_ETH=y
+CONFIG_USB_NET_KALMIA=y
+CONFIG_USB_NET_QMI_WWAN=y
+CONFIG_USB_HSO=y
+CONFIG_USB_NET_INT51X1=y
+CONFIG_USB_IPHETH=y
+CONFIG_USB_SIERRA_NET=y
+CONFIG_USB_VL600=y
+CONFIG_USB_NET_CH9200=y
