add N2 to the unified config

--- a/arch/arm/configs/rv1126-BBL.config
+++ b/arch/arm/configs/rv1126-BBL.config
@@ -13,6 +13,7 @@ CONFIG_VIDEO_OV2740=y
 # CONFIG_VIDEO_OV4689 is not set
 CONFIG_RTL_WIRELESS_SOLUTION=y
 CONFIG_BCMDHD=y
+CONFIG_RTL8723DS=m
 CONFIG_AP6XXX=y
 # CONFIG_AP6XXX_WIFI6 is not set
 # CONFIG_AP6XXX_INDEP_POWER is not set
@@ -59,7 +60,7 @@ CONFIG_WATCHDOG_PRETIMEOUT_GOV=y
 CONFIG_WATCHDOG_PRETIMEOUT_DEFAULT_GOV_PANIC=y
 # CONFIG_WATCHDOG_PRETIMEOUT_GOV_NOOP is not set
 CONFIG_WATCHDOG_PRETIMEOUT_GOV_PANIC=y
-CONFIG_RTL8189FS=y
+CONFIG_RTL8189FS=m
 CONFIG_REALTEK_PHY=y
 CONFIG_USB_CATC=y
 CONFIG_USB_KAWETH=y
